@@ -3,10 +3,11 @@ package classWork.service;
 import classWork.dto.ProductDTO;
 import classWork.dto.ProductReviewDTO;
 import classWork.dto.ProductWithReviewDTO;
-import org.w3c.dom.ls.LSOutput;
 
 import java.util.*;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
 
 public class ProductService {
     public List<ProductDTO> getAllProductsByCategory(List<ProductDTO> products, String category) {
@@ -14,11 +15,13 @@ public class ProductService {
                 .filter(p -> p.getCategory().equalsIgnoreCase(category))
                 .toList();
     }
+
     public List<ProductDTO> getProductsBelowPrice(List<ProductDTO> products, double price) {
         return products.stream()
-                .filter(p->p.getPrice()<price)
+                .filter(p -> p.getPrice() < price)
                 .toList();
     }
+
     public List<ProductDTO> sortProductsByPrice(List<ProductDTO> products, boolean ascending) {
         return products.stream()
                 .sorted(ascending
@@ -26,6 +29,7 @@ public class ProductService {
                         : Comparator.comparingDouble(ProductDTO::getPrice).reversed())
                 .toList();
     }
+
     public ProductDTO getMostExpensiveProduct(List<ProductDTO> products) {
         return products.stream()
                 .max(Comparator.comparingDouble(ProductDTO::getPrice))
@@ -34,106 +38,116 @@ public class ProductService {
 
     public double calculateTotalStockValue(List<ProductDTO> products) {
         return products.stream()
-                .mapToDouble(product->product.getPrice()* product.getQuantityInStock())
+                .mapToDouble(product -> product.getPrice() * product.getQuantityInStock())
                 .sum();
     }
 
-//    public List<ProductWithReviewDTO> getAllProductsWithReviews (List<ProductDTO> products, List<ProductReviewsDTO> reviews) {
-//        List<ProductWithReviewDTO> productsWithReviews = new ArrayList<>();
-//        for (ProductDTO product : products) {
-//            ProductWithReviewDTO productWithReview = new ProductWithReviewDTO(product);
-//            List<ProductReviewsDTO> matchingReviews = new ArrayList<>();
-//            for (ProductReviewsDTO review : reviews) {
-//                if (product.getProductId().equals(review.getProductId())) {
-//                    matchingReviews.add(review);
-//                }
-//            }
-//            productWithReview.setReviews(matchingReviews);
-//            productsWithReviews.add(productWithReview);
-//        }
-//        return productsWithReviews;
-//    }
-//    public List<ProductWithReviewDTO> getAllProductsWithReviews (List<ProductDTO> products, List<ProductReviewsDTO> reviews) {
-//        return products.stream()
-//                .map(product -> {
-//                    ProductWithReviewDTO productWithReview = new ProductWithReviewDTO(product);
-//                    List<ProductReviewsDTO> matchingReviews = reviews.stream()
-//                            .filter(review -> product.getProductId().equals(review.getProductId()))
-//                            .collect(Collectors.toList());
-//                    productWithReview.setReviews(matchingReviews);
-//                    return productWithReview;
-//                })
-//                .collect(Collectors.toList());
-//    }
 
-    public List<ProductWithReviewDTO> getAllProductsWithReviews(List<ProductDTO> products, List<ProductReviewDTO> reviews) {
-        Map<Integer, List<ProductReviewDTO>> reviewsByProductId = reviews.stream()
-                .collect(Collectors.groupingBy(ProductReviewDTO::getProductId));
 
+    public List<ProductWithReviewDTO> getAllProductsWithReviews (List<ProductDTO> products, List<ProductReviewDTO> reviews) {
         return products.stream()
                 .map(product -> {
                     ProductWithReviewDTO productWithReview = new ProductWithReviewDTO(product);
-                    productWithReview.setReviews(
-                            reviewsByProductId.getOrDefault(product.getProductId(), new ArrayList<>())
-                    );
+                    List<ProductReviewDTO> matchingReviews = reviews.stream()
+                            .filter(review -> product.getProductId().equals(review.getProductId()))
+                            .collect(Collectors.toList());
+                    productWithReview.setReviews(matchingReviews);
                     return productWithReview;
                 })
                 .collect(Collectors.toList());
     }
 
-    //NEW
-//
-//    public List<ProductDTO> getProductsWithPositiveReviews
-//            (List<ProductDTO> products, Map<Integer, List<ProductReviewDTO>> reviews) {
-//
-//        for (List<ProductReviewDTO> value : reviews.values()) {
-//
-//        }
-//
-//        List<ProductReviewDTO> positiveReviews = reviews.values().stream()
-//                .filter(p->p.getRating()>=4)
-//                .toList();
-//
-//
-//
-//        List<ProductDTO> productsList = new ArrayList<>();
-//        return productsList;
-//    }
-    public List<ProductDTO> getProductsWithPositiveReviews
-    (List<ProductDTO> products, Map<Integer, List<ProductReviewDTO>> reviews) {
+
+    public List<ProductWithReviewDTO> getProductsWithPositiveReviews(List<ProductWithReviewDTO> products) {
+        return products.stream()
+                .filter(p->p.getReviews().stream().
+                        anyMatch(r->r.getRating() > 4))
+                .toList();
+    }
+
+    public List<ProductDTO> getProductsWithPositiveReviews(
+            List<ProductDTO> products,
+            Map<Integer, List<ProductReviewDTO>> reviews
+    ) {
         return products.stream()
                 .filter(product -> {
                     List<ProductReviewDTO> productReviews = reviews.get(product.getProductId());
-                    if (productReviews == null) {
-                        return false;
-                    }
-                    return productReviews.stream().anyMatch(review -> review.getRating() >= 4);
+                    return productReviews != null && productReviews.stream()
+                            .anyMatch(review -> review.getRating() >= 4);
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
 
 
 
-
-    public List<ProductDTO> getTopRatedProducts(List<ProductDTO> products, Map<Integer, List<ProductReviewDTO>> reviews, int topN) {
-        List<ProductDTO> productsList = new ArrayList<>();
-
-        return productsList;
+    public List<ProductDTO> getTopRatedProducts(
+            List<ProductDTO> products,
+            Map<Integer, List<ProductReviewDTO>> reviews,
+            int topN
+    ) {
+        return products.stream()
+                .sorted((p1, p2) -> {
+                    double avgRating1 = calculateAverageRating(p1.getProductId(), reviews);
+                    double avgRating2 = calculateAverageRating(p2.getProductId(), reviews);
+                    return Double.compare(avgRating2, avgRating1); // Sort in descending order
+                })
+                .limit(topN)
+                .collect(Collectors.toList());
     }
 
-    public List<String> getAllReviewTexts(List<ProductDTO> products, Map<Integer, List<ProductReviewDTO>> reviews) {
-        return reviews.values().stream()//take the map values
-                .flatMap(Collection::stream)//
-                .map(ProductReviewDTO::getReviewText)
+    public List<String> getAllReviewTexts(List<ProductWithReviewDTO> products){
+        return products.stream()
+                .flatMap(p->p.getReviews().stream()
+                        .map(ProductReviewDTO::getReviewText))
                 .toList();
     }
 
-    public void calculateAverageRatingPerProduct(List<ProductDTO> products, Map<Integer, List<ProductReviewDTO>> reviews) {
-        List<ProductReviewDTO> valueList = reviews.values().stream()
-                .flatMap(Collection::stream)
-                .toList();
 
-//        valueList.stream()
+    public List<String> getAllReviewTexts(
+            List<ProductDTO> products,
+            Map<Integer, List<ProductReviewDTO>> reviews
+    ) {
+        return products.stream()
+                .flatMap(product -> {
+                    List<ProductReviewDTO> productReviews = reviews.get(product.getProductId());
+                    return productReviews != null ? productReviews.stream()
+                            .map(ProductReviewDTO::getReviewText) : Stream.empty();
+                })
+                .collect(Collectors.toList());
+    }
 
+
+    public Map<Integer, Double> calculateAverageRatingPerProduct(List<ProductWithReviewDTO> products) {
+        return products.stream()
+                .collect(Collectors.toMap(
+                        ProductDTO::getProductId, // ProductDTO nes kazkodel netinka paveldejusi klase.
+                        product -> product.getReviews().stream()
+                                .mapToInt(ProductReviewDTO::getRating)
+                                .average()
+                                .orElse(0.0)
+                ));
+    }
+
+
+
+    public Map<Integer, Double> calculateAverageRatingPerProduct(
+            List<ProductDTO> products, Map<Integer, List<ProductReviewDTO>> reviews) {
+        return products.stream()
+                .collect(Collectors.toMap(
+                        ProductDTO::getProductId,
+                        product -> calculateAverageRating(product.getProductId(), reviews)
+                ));
+    }
+
+    private double calculateAverageRating(int productId, Map<Integer, List<ProductReviewDTO>> reviews) {
+        List<ProductReviewDTO> productReviews = reviews.get(productId);
+        if (productReviews == null || productReviews.isEmpty()) {
+            return 0.0;
+        }
+        return productReviews.stream()
+                .mapToInt(ProductReviewDTO::getRating)
+                .average()
+                .orElse(0.0);
     }
 }
+
